@@ -1,4 +1,5 @@
 3.10
+ * Make stress use client mode to avoid checking commit log size on startup (CASSANDRA-12478)
  * cdc column addition still breaks schema migration tasks (CASSANDRA-12697)
  * Upgrade metrics-reporter dependencies (CASSANDRA-12089)
  * Tune compaction thread count via nodetool (CASSANDRA-12248)
